--- a/style.css
+++ b/style.css
@@ -2,22 +2,57 @@ body {
   background: #1e2440;
   color: #f2efe2;
   font-size: 50px;
+  margin:0;
 }
 
 #scores{
-  position: relative;
+  /* position: relative; */
   border: whitesmoke 1px;
   min-height: max-content;
+  display: block;
+  margin-bottom: 30px;
+}
+
+#summary{
+  border: gray 3px dashed;
+  max-width: 420px;
+  padding:10px;
+}
+#summary p .header{
+  font-weight: bold;
+}
+#summary p{
+  display: inline-block;
+  font-size: 20px;
+  min-width: 120px;
+  margin:0px;
+}
+
+#lastCommand{
+  font-family: monospace;
 }
 .row{
   display: block;
+
+}
+#cell-header .row{
+  margin-left: 7px;
+}
+#cell-header .cell{
+  font-size: 30px;
+  border:none;
+  margin:-7px;
+  min-width:153px;
+  text-align: center;
 }
 .cell{
   display: inline-block;
-  width:140px;
-  text-align: right;
-  border-bottom: whitesmoke 1px solid;
+  min-width:150px;
+  text-align: center;
+  border: whitesmoke 3px solid;
+  /* margin: -7px */
 }
+
 .count{
   display: inline-block;
   width:20px;
@@ -32,10 +67,9 @@ p {
 }
 
 .mycontainer {
-    max-width: 300px;
+    max-width: 500px;
     margin: 0 auto;
-    /* padding: 150px 100px; */
-    text-align: center;
+    /* text-align: center; */
 }
 
 @media (max-width: 768px) {
