--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@ body {
   font-size: 50px;
   margin:0;
 }
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
 
 #scores{
   /* position: relative; */
